tests/rascal/negative/type_errors/L1/17_expression_ES10_D4_34.ob
MODULE Test17;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := 200;
               q := ((200 DIV ((y - y) MOD (0 - 0))) < z);
               p := (((1 * z) DIV 1223) < (y - (200 DIV 0)));
               z := y;
               q := r;
               z := ((2 DIV ((200 * y) * z)) DIV (((- x) * (2 + 1)) * 200));
  (* error *)  q := p;
               x := 1223;
               x := ((- 0) DIV ((- (1 * z)) + 200));
               p := ((+ 200) < ((+ 1223) - (- y)))
END Test17.